# OpenThisle

./: CMakeLists.txt  CREDITS.MD  LICENSE.LIB  README.md  alias.hpp  colors.cpp  colors.hpp  main.cpp  network.hpp  render.cpp  render.hpp  resources.cfg  world.hpp
asset/: stud.material  stud.mesh
classes/: BasePart.cpp  BasePart.hpp  CMakeLists.txt  Instance.hpp  RenderedObject.cpp  RenderedObject.hpp  classes.hpp
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  render.hpp
src/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/OpenThisle_autogen/: deps
src/OpenThisle_autogen/include/: ui_Window.h
src/gui/: Window.cpp  Window.hpp  Window.ui
